# ZekaEngine

./: .gitignore  .gitmodules  LICENSE  README.md
Code/: CMakeLists.txt
Code/Android/app/: build.gradle
Code/Android/app/src/androidTest/java/com/zeka/android/: ExampleInstrumentedTest.java
Code/Android/app/src/main/: AndroidManifest.xml
Code/Android/app/src/main/java/com/zeka/android/: MainActivity.java
Code/Android/app/src/main/res/values/: styles.xml
Code/Android/app/src/test/java/com/zeka/android/: ExampleUnitTest.java
Code/Android/gradle/wrapper/: gradle-wrapper.properties
Code/ZekaApplication/: Application.cpp  CMakeLists.txt
Code/ZekaEngine/: Application.h  Audio.cpp  Audio.h  AudioDecoder.cpp  AudioDecoder.h  AudioTool.cpp  AudioTool.h  Audio_None.cpp  Audio_None.h  CMakeLists.txt  Draw2D.cpp  Draw2D.h  Encryption.cpp  Encryption.h  Engine.cpp  Engine.h  Event.h  FileSystem.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  FontTool.cpp  FontTool.h  GLSLSourceGenerator.cpp  GLSLSourceGenerator.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsContext.h  HelperDefines.h  ImageTool.cpp  ImageTool.h  IncludeEngine.h  IncludeFreeTypeHeaders.h  KeyCode.h  Math.h  Matrix4.h  Platform.h  Quaternion.h  RHIBase.h  (+18 more)
Code/ZekaEngine/Android/: AndroidEngine.cpp  AndroidEngine.h  AndroidFileSystem.cpp  AndroidFileSystem.h  AndroidGraphicsContext_OpenGLES.cpp  AndroidGraphicsContext_OpenGLES.h  AndroidMain.cpp  AndroidPlatform.cpp  AndroidWindow.cpp  AndroidWindow.h
Code/ZekaEngine/OpenAL/: Audio_OpenAL.cpp  Audio_OpenAL.h
Code/ZekaEngine/OpenGL/: IncludeOpenGLHeaders.h  OpenGLFunctions.h  OpenGLLoader.cpp  OpenGLLoader.h  RHI_OpenGL.cpp  RHI_OpenGL.h  glcorearb.h
Code/ZekaEngine/Posix/: PosixPlatform.cpp
Code/ZekaEngine/Windows/: IncludeWindowsHeaders.h  WindowsEngine.h  WindowsFileSystem.cpp  WindowsFileSystem.h  WindowsGraphicsContext_OpenGL.cpp  WindowsGraphicsContext_OpenGL.h  WindowsMain.cpp  WindowsPlatform.cpp  WindowsWindow.cpp  WindowsWindow.h
Data/Shaders/: Draw2D_Color_FS.glsl  Draw2D_Image_FS.glsl  Draw2D_Text_FS.glsl  Draw2D_VS.glsl  Renderer_Line_FS.glsl  Renderer_Line_VS.glsl  Renderer_Quad_FS.glsl  Renderer_Quad_VS.glsl  engine_shaders.pak
